Add AnyType stub to fix doc fail, pass check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -822,3 +822,6 @@ export(UserProfileServicesApi)
 export(VerificationServicesApi)
 export(WikiPageServicesApi)
 export(WikiPageServices2Api)
+
+# Other
+export(AnyType)
